--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
   <script src="/scripts/freet.js"></script>
   <script src="/scripts/user.js"></script>
+  <script src="/scripts/bookmark.js"></script>
   <script src="/scripts/index.js"></script>
 </head>
 
@@ -19,6 +20,8 @@
     <section id="operations-container">
       <h2>Operations:</h2>
       <div class="scrollbox">
+        <!-- USERS -->
+        <h3>User API</h3>
         <form id="create-user">
           <h3>Create User</h3>
           <div>
@@ -73,6 +76,8 @@
           <input type="submit" value="Sign out">
         </form>
 
+        <!-- FREETS -->
+        <h3>Freet API</h3>
         <form id="view-all-freets">
             <h3>View All Freets</h3>
             <input type="submit" value="View All Freets">
@@ -116,6 +121,40 @@
             <input id="id" name="id">
           </div>
           <input type="submit" value="Delete Freet">
+        </form>
+
+        <!-- BOOKMARKS -->
+        <h3>Bookmarks API</h3>
+        <form id="view-all-bookmarks">
+            <h3>View All Bookmarks</h3>
+            <input type="submit" value="View All Bookmarks">
+        </form>
+
+        <form id="view-bookmarks-by-username">
+          <h3>View Bookmarks By Username</h3>
+          <div>
+            <label for="username">Username:</label>
+            <input id="username" name="username">
+          </div>
+          <input type="submit" value="View Bookmarks By Author">
+        </form>
+
+        <form id="create-bookmark">
+          <h3>Create Bookmark</h3>
+          <div>
+            <label for="freetId">Freet ID to bookmark:</label>
+            <textarea id="freetId" name="freetId"></textarea>
+          </div>
+          <input type="submit" value="Create Bookmark">
+        </form>
+
+        <form id="delete-bookmark">
+          <h3>Delete Bookmark</h3>
+          <div>
+            <label for="id">ID:</label>
+            <input id="id" name="id">
+          </div>
+          <input type="submit" value="Delete Bookmark">
         </form>
       </div>
     </section>
