re-add bookmark infrastructure

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta name="author" content="6.170 Staff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <script src="/scripts/bookmark.js"></script>
     <script src="/scripts/freet.js"></script>
     <script src="/scripts/follow.js"></script>
     <script src="/scripts/user.js"></script>
@@ -151,6 +152,38 @@
               <input id="username" name="username" />
             </div>
             <input type="submit" value="Get" />
+          </form>
+
+          <form id="view-all-bookmarks">
+            <h3>View All Bookmarks</h3>
+            <input type="submit" value="View All Bookmarks" />
+          </form>
+
+          <form id="view-bookmarks-by-username">
+            <h3>View Bookmarks By Username</h3>
+            <div>
+              <label for="username">Username:</label>
+              <input id="username" name="username" />
+            </div>
+            <input type="submit" value="View Bookmarks By Username" />
+          </form>
+
+          <form id="create-bookmark">
+            <h3>Create Bookmark</h3>
+            <div>
+              <label for="freetId">Freet:</label>
+              <textarea id="freetId" name="freetId"></textarea>
+            </div>
+            <input type="submit" value="Create Bookmark" />
+          </form>
+
+          <form id="delete-bookmark">
+            <h3>Delete Bookmark</h3>
+            <div>
+              <label for="id">ID:</label>
+              <input id="id" name="id" />
+            </div>
+            <input type="submit" value="Delete Bookmark" />
           </form>
         </div>
       </section>
